--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -5,6 +5,92 @@ light blue: #1c5380
 */
 
 body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+  height: 100%;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  margin: 10% 20% 5%;
+  max-width: 935px;
+  width: 100%;
+
 }
+
+h1{
+  font-size:22px;
+  line-height: 40px;
+  color: #06365f;
+  vertical-align: baseline;
+}
+
+footer{
+  clear: both;
+  font-size: 8px;
+  color: lightgrey;
+  vertical-align: baseline;
+}
+
+li{
+  font-size:12px;
+  color: #1c5380;
+  float:left;
+  list-style-image: none;
+  list-style-position: outside;
+  list-style-type: none;
+  font-weight: 600;
+  padding:10px;
+  text-transform: uppercase;
+}
+
+section{
+  background: url("../images/frame.png");
+  background-repeat: no-repeat;
+  float: left;
+  padding: 1% 4%;
+  margin-left: 5%;
+  text-align: left;
+  line-height: 28px;
+  width: 410px;
+  height: 500px;
+  font-size: 14px;
+}
+
+img{
+  float:left;
+}
+
+.brand{
+  margin-left: 5%;
+  float:left;
+  text-align:center;
+}
+
+.home{
+  margin: 10% 0px 0px 0px;
+  text-align:center;
+  float:left;
+}
+
+.login{
+  color: #FFFFFF;
+  font-size: 14px;
+  font-weight:600;
+  margin-right: 0 0 5px 5px;
+  text-align:right;
+}
+
+.button{
+  background: linear-gradient(180deg, #FFFFFF 1%, #1c5380 99%);;
+  border: 1px solid #06365f;
+  margin-left: 50px;
+  width: 100px;
+  height: 40px;
+  border-radius: 5%;
+}
+
+.badge{
+  float:left;
+  margin: 2% 2% 0 0;
+  text-align: left;
+}
+
+
