--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,69 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.description-h1{
+  color:#576E9C;
+}
+
+.article-insta{
+  background-image: url(../images/frame.png);
+  position: relative;
+  bottom:50px;
+  padding:30px;
+}
+
+.description-logo{
+  margin: 10px 0px 50px 0px;
+}
+
+.background1{
+  display: block;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  height: 300px;
+}
+
+.content-insta{
+  position: absolute;
+  top:100px;
+  margin:0% 10% 0% 10%;
+}
+.phones{
+  display: inline-block;
+  width: 20%;
+  padding-left:10%;
+}
+
+.presentation{
+  display: inline-block;
+  width: 30%;
+  margin-left:5%;
+}
+
+.footer-nav{
+  /* padding-top: 300px; */
+  display: inline-block;
+
+}
+
+ul li{
+  
+  display: inline-block;
+  list-style-type: none;
+  margin: 0px 20px 0px 20px;
+  position: relative;
+  bottom:200px;
+  left:20%;
+  color:#576E9C;
+  font-weight: bold;
+}
+
+ul{
+  margin-top: 30%;
+  
+}
+
+.app-telechargement{
+  margin-top: 10px;
+}
