--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,97 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+/*-- content -- */
+
+.content-container{
+  display:flex;
+  flex-direction: row;
+  margin: 60px 150px 60px 150px;
+}
+
+.info-container{
+  display:flex;
+  flex-direction: column;
+  flex-grow:1;
+  padding-left:40px;
+}
+
+.image-container{
+  display:flex;
+  flex-grow:1;
+  padding-right:40px;
+}
+
+/*-- inside info container -- */
+.header-container{
+  display: flex;
+  flex-direction: row;
+  padding-bottom: 30px;
+}
+
+.text-container{
+  position: relative;
+  flex: 1;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size:cover;
+  padding: 40px 100px;
+}
+
+h2{
+  font-size: 30px;
+}
+
+#iphone{
+  padding-right: 40px;
+}
+
+.text-img{
+}
+
+/*-- inside header container -- */
+.header-img{
+  display:flex;
+  padding-right:450px;
+}
+
+.header-button{
+  display:flex;
+  height: 50%;
+  margin-top:20px;
+}
+
+#button{
+  background-color:#3A6890;
+  font-size: 18px;
+  letter-spacing: 1px;
+  color: white;
+}
+
+/*-- FOOTER -- */
+.footer-container{
+  width: 50%;
+  margin:0 auto;
+  display: flex;
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+}
+
+li{
+  list-style: none;
+  padding-left: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #3A6890;
+}
+
+#copyright {
+  color: grey;
 }
