--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,106 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+em {
+  font-style: normal;
+  font-weight: bold;
+}
+
+h1{
+  color: #06365f;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.text{
+  padding: 0 20px;
+}
+
+.instagram {
+  width: 540px;
+  height: 512px;
+  margin-left: 20px;
+}
+
+.description {
+  background-image: url(../images/frame.png);
+  background-size: 540px 500px;
+  width: 500px;
+  height: 400px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+button {
+  background-color: #1c5380;
+  padding: 10px;
+  width: 130px;
+  height: 50px;
+  border-radius: 5px;
+  border-color: rgba(6,54,95,0.2);
+  font-weight: bold;
+}
+
+.content {
+  width: 900px;
+  margin: 10% auto;
+}
+
+.instaccueil {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 10px 0 10px;
+}
+
+.col {
+  float: left;
+}
+
+.clearfix{
+  clear: both;
+}
+
+.login {
+  color: white;
+  text-decoration: none;
+  font-size: 15px;
+}
+
+.imgspace {
+  margin-left: 20px;
+}
+
+.links {
+  display: inline-block;
+  float: right;
+  padding: 0;
+  margin: 0 20px 0 0;
+}
+
+.links li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.links a{
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+}
+
+.instaright {
+  color: rgba(28, 83, 128, 0.7);
+  text-transform: uppercase;
+}
+
+.about-us {
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-around;
 }
