--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,8 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+.header{
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
+  height: 280px;
+}
