--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,65 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.header{
+  width: 100%;
+  height: 280px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+.content{
+  width: 95%;
+  max-width: 800px;;
+  text-align: center;
+  margin-top: -220px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.col-1{
+  width: 33%;
+  float: left;
+}
+
+.col-1 img{
+  width: 100%;
+}
+
+.col-2{
+  width: 65%;
+  float: right;
+}
+
+.col-2 p{
+  text-align: left;
+  width: 100%;
+}
+
+#content-text{
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  padding: 2em;
+  text-align: left;
+}
+
+.clearfix{
+  clear: both;
+}
+
+#links{
+  margin-top: 40px;
+  text-align: center;
+}
+
+a{
+  text-decoration: none;
+  color: blue;
+  text-transform: uppercase;
+}
+
+#image{
+  text-align: left;
+}
