--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,20 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png") repeat-x top;
+}
+
+/*** Content ***/
+.content{
+  width: 80%;
+  margin: 20% auto;
+}
+.content_img{
+  height: 100%;
+  width: 33%;
+  float: left;
+}
+.content_info{
+  float: left;
+  width: 60%;
 }
