--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -71,7 +71,7 @@ a{
   text-decoration: none;
   color: #1c5380;
   text-transform: uppercase;
-  
+  font-weight: bold;
 }
 
 #logo{
@@ -86,6 +86,8 @@ button{
   color: white;
   font-size: 15px;
   margin-left: 50px;
+  border: 1px solid #06365f;
+  border-radius: 5%;
 }
 
 .button-image{
