--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -11,15 +11,48 @@ body {
   background-image: url('../images/bgtile.png');
 }
 
+ul {
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+  margin: 0 6px;
+}
+
+h1 {
+  color: #06365f;
+  font-size: 20px;
+  margin: 0;
+}
+
+a {
+  color: #1c5380;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
+}
+
+span {
+  font-size: 12px;
+  font-weight: bold;
+  text-shadow: 0 1px 1px #2f5b83;
+  margin: 0 5px;
+  display: inline-block;
+}
+
 .content {
   margin: 0 auto;
   width: 800px;
   position: relative;
-  top: 130px;
+  top: 110px;
 }
 
 .phone {
-  width: 30%;
+  width: 36%;
   float: left;
 }
 
@@ -35,34 +68,56 @@ body {
 
 .logoImage {
   float: left;
-  width: 250px;
+  width: 290px;
   margin: 15px;
-  position: relative;
 }
 
 .loginBtn {
-  position: relative;
-  float: right;
-  margin-left: 250px;
+  float: left;
+  margin: 28px 0 0 47px;
+  border: 1px solid #2f5b83;
+  border-radius: 3px;
+  padding: 0 8px;
+  color: white;
+  background: linear-gradient(#6e92b0, #487499);
+  vertical-align: middle;
+}
 
+.homeImage {
+  margin-top: 8px;
+}
+
+.text {
+  margin: 15px;
+  padding: 30px 38px;
+  clear: both;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
 .badge {
-  float: left;
+  display: inline-block;
+  margin-top: 15px;
+  margin-right: 15px;
 }
 
 #appStore {
-
+  width: 140px;
 }
 
 #playStore {
-
+  width: 130px;
 }
 
 
 
 .footer {
   clear:both;
+  position: relative;
   text-align: center;
-  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 9px;
+  font-weight: bold;
+  padding: 8px 0;
 }
