--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,42 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png") repeat-x ; 
+
+}
+
+.wrapper{
+  width: 980px;
+ /* max-width: 100%;*/
+  margin:50px auto;
+}
+
+ul{
+  float: left;
+}
+ul li{
+
+  display: inline-block;
+  list-style-type: none; 
+  text-transform: uppercase;
+}
+
+ a {
+  text-decoration: none;
+  color:#7998b3;
+}
+.copy{
+  padding: 15px;
+  float: left;
+}
+.col{
+  width: 33%;
+  float: left;
+}
+.col-2{
+  width: 66%;
+  float: left;
+}
+.logIn{
+float: left;
 }
