--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,57 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png") repeat-x;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.wrapper {
+  width: 980px;
+  margin: 50px auto;
+  column-gap: 60px;
+}
+.col {
+  width: 33%;
+  float: left;
+}
+
+.col-2 {
+  width: 63%;
+  padding: 10px;
+}
+
+.text {
+  background: url("../images/frame.png") no-repeat;
+  width: 66%;
+  padding: 30px;
+
+}
+
+ul {
+  float: left;
+}
+
+ul li{
+  display: inline-block;
+  list-style-type: none;
+  color: #7998b3;
+  text-transform: uppercase;
+}
+
+a:link{
+  text-decoration: none;
+}
+
+a:visited{
+  color: #7998b3;
+}
+
+.copy {
+  color: lightgray;
+  text-transform: uppercase;
+  float: left;
+  padding: 15px;
 }
