--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,77 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  text-align: center;
+}
+h1 {
+  color: #06365f;
+  font-size: 30px;
+  width: 320px;
+}
+.container {
+  display: inline-block;
+  width: 70%;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+.image-phone{
+  float: left;
+  width: 30%;
+}
+.insta-def {
+  float: right;
+  width: 55%;
+  margin: 0 20px;
+}
+.clearfix {
+  clear: both;
+}
+.text {
+  background-color: white;
+  padding:10px 20px;
+  text-align: left;
+  border-radius: 5px;
+  box-shadow: 1px -0 10px black;
+}
+.footer {
+  padding: 14px 0;
+  height: 40px;
+  margin: 0 20%;
+  font-size: 0.7em;
+  text-transform: uppercase;
+}
+.list-el {
+  float: left;
+  list-style-type: none;
+  text-align: center;
+  width: 8.5%;
+  padding: 0 2px;
+}
+.button {
+  background: linear-gradient(to bottom, #7ab4e4e1, #4176a1); ;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: block;
+  width: 100px;
+  margin: 14px auto 0;
+  padding: 5px;
+  border: 1px solid rgba(48, 59, 92, 0.432);
+  float: right;
+}
+.brand-image {
+  float: left;
+  margin: 0 auto;
+}
+.text p {
+  width: 90%;
+}
+.ul-el {
+  color:#1c5380;
+  font-weight: bold;
+}
+footer p {
+  color:#5a5a5aa6; 
 }
