--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,10 +7,62 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
   background: url('../images/bgtile.png') repeat-x;
 }
 
+footer{
+  position: relative;
+  text-transform: uppercase;
+  font-weight: bold;
+  clear:both;
+  left: 33%;
+}
+
 .box{
-  position:relative;
-  
+  margin: auto;
+  vertical-align: middle;
+  width: 1200px;
+}
+
+.mobile-image-container{
+  width:33%;
+  float: left;
+}
+
+.logo-container{
+  width:66%;
+  float:right;
+}
+
+.login-container{
+  display: inline;
+  background-color: linear-gradient(#06365f, white) ;
+  border: 1px solid black;
+  padding: 10px 5px ;
+  border-radius: 8px;
+}
+.login{
+  text-decoration: none;
+  color: white;
+  vertical-align: middle;
+  font-weight: bolder;
+}
+.title{
+  color: #06365f;
+}
+.footer-item{
+  text-decoration: none;
+  margin: 10px;
+  color: #1c5380;
+}
+.instagram-copy{
+  color:lightgrey;
+}
+
+.image-frame{
+  background: url('../images/frame.png') no-repeat;
+  background-size: 100%;
+  padding: 0;
+  width: 66%;
 }
