--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,37 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.blue-tile {
+  background-image: url('/home/lilhak4/2018-06/lab-css-instagram-clone/starter-code/images/bgtile.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#phones {
+  
+}
+
+.paragraph {
+  
+}
+
+#apple-store {
+
+}
+
+#google-play {
+
 }
